vehicle color changed

--- a/src/app/create-vehicle/create-vehicle.component.html
+++ b/src/app/create-vehicle/create-vehicle.component.html
@@ -1,4 +1,4 @@
-<p>create-vehicle works!</p>
+<h1 class="color">create vehicle</h1>
 <form [formGroup]="vehicleForm">
     <label for="">vehicle</label>
     <input type="text" formControlName="vehicle">
