--- a/src/app/create-user/create-user.component.html
+++ b/src/app/create-user/create-user.component.html
@@ -1,4 +1,4 @@
-<p>create-user works!</p>
+<p class="create">create-user</p>
 <form [formGroup]="userForm">
     <label for="">Name:</label>
     <input type="text" formControlName="name">
